# vortex

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  README.md  cell0.vx  genesis.sh  mangonextsteps.txt  mcp_config.json  vx
.claude/: CLAUDE.md
design/: 00-philosophy.md  01-type-system.md  02-memory-model.md  03-crypto-primitives.md  04-llm-primitives.md  05-compiler.md  06-syntax.md  07-stdlib.md  08-tooling.md  09-roadmap.md  10-gpu-isa-analysis.md  11-competitive-advantages.md  12-what-llms-cant-do.md  13-matrix-of-thought.md  README.md
docs/: compilation.md  index.html  mcp-agent-prompt.txt
examples/: adaptive_depth_demo.vx  attention.vx  autograd_demo.vx  basics.vx  benchmark.vx  benchmark_vortex.vx  bigint_benchmark.vx  codegen_demo.vx  crypto.vx  crypto_wallet.vx  data_pipeline.vx  distributed_training.vx  energy_creativity.vx  enums.vx  errors.vx  ffi_demo.vx  field_arithmetic.vx  forward_forward.vx  forward_forward_learning.vx  generative_model.vx  gpu_jit_demo.vx  hello_vortex.vx  image_classifier.vx  inference_gpt.vx  keygen.vx  keygen_full.vx  liquid_neural_ode.vx  llm_from_scratch.vx  mamba_model.vx  matmul.vx  mcp_demo.sh  methods.vx  moe_router.vx  mot_reasoning.vx  multiscale_reasoning.vx  nas_demo.vx  neural_ode.vx  nn_autoencoder.vx  nn_classifier.vx  nn_language_model.vx  (+38 more)
libs/: json.vx  matrix.vx  model.vx  tokenizer.vx
python/: pyproject.toml  setup.py  vortex.py
python/vortex/: __init__.py  cli.py  client.py
src/: adaptive_inference.rs  agent_protocol.rs  agi_core.rs  arch_graph.rs  architectures.rs  ast.rs  autodiff.rs  autograd.rs  (+118 more)
(+104 files in other folders)
