[package]
name = "vortex"
version = "0.1.0"
edition = "2021"
description = "The Vortex GPU programming language compiler"

[features]
nccl = []
cuda = []

[dependencies]
logos = "0.14"
codespan-reporting = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"

[dev-dependencies]
insta = "1.39"
tempfile = "3"
