[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex-lang"
version = "0.1.0"
description = "Vortex GPU Programming Language - Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "MangoByteLabs"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
vortex = "vortex.cli:main"

[tool.setuptools.packages.find]
include = ["vortex*"]
